tests/ui/imports/ambiguous-12.stderr
error[E0659]: `b` is ambiguous
  --> $DIR/ambiguous-12.rs:21:5
   |
LL |     b();
   |     ^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `b` could refer to the function imported here
  --> $DIR/ambiguous-12.rs:17:5
   |
LL | use crate::ciphertext::*;
   |     ^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `b` to disambiguate
note: `b` could also refer to the function imported here
  --> $DIR/ambiguous-12.rs:18:5
   |
LL | use crate::public::*;
   |     ^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `b` to disambiguate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
